# keboli-evaluation-agent

./: .env.example  Dockerfile  Makefile  README.md  deploy.sh  generate_api_docs.py  main.py  pyproject.toml
.github/workflows/: deploy.yml
app/: config.py  exceptions.py  graph.py  keboli_client.py  llm.py  main.py  prompt_manager.py  state.py
app/nodes/: __init__.py  communication_node.py  cultural_node.py  scoring_node.py  technical_node.py
app/utils/: json_utils.py  skill_utils.py
app/workflow/: builder.py
docs/: API_Documentation.md  openapi.json
requirements/: base.txt  dev.txt
